--- a/map.html
+++ b/map.html
@@ -89,7 +89,7 @@
         <nav class="hidden md:flex space-x-8">
           <a href="ava.html" class="text-gray-600 hover:text-primary">Avaleht</a>
           <a href="map.html" class="text-gray-600 hover:text-primary">Kaart</a>
-          <a href="#" class="text-gray-600 hover:text-primary">Päringuud</a>
+          <a href="paringud.html" class="text-gray-600 hover:text-primary">Päringud</a>
           <a href="#" class="text-gray-600 hover:text-primary">Kliendid</a>
           <a href="#" class="text-gray-600 hover:text-primary">Meist</a>
         </nav>
@@ -154,7 +154,7 @@
           <ul class="space-y-2 text-sm text-gray-600">
             <li><a href="ava.html" class="hover:text-primary">Avaleht</a></li>
             <li><a href="map.html" class="hover:text-primary">Kaart</a></li>
-            <li><a href="#" class="hover:text-primary">Päringuud</a></li>
+            <li><a href="paringud.html" class="hover:text-primary">Päringud</a></li>
             <li><a href="#" class="hover:text-primary">Kliendid</a></li>
           </ul>
         </div>
