Implement search panel in map.html and paringud.html; enhance input fields in ava.html. Added a search toggle button and panel for property search in map.html, along with styling adjustments. Updated search section in paringud.html for consistency across pages.

--- a/ava.html
+++ b/ava.html
@@ -61,10 +61,10 @@
       <div class="bg-white rounded-xl p-6 shadow-lg">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
           <div class="col-span-2">
-            <input type="text" placeholder="Otsi aadressi või piirkonda..." class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary">
+            <input type="text" placeholder="Otsi aadressi või piirkonda..." class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary text-gray-900 placeholder-gray-500">
           </div>
           <div>
-            <select class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary">
+            <select class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary text-gray-900">
               <option value="">Kinnisvara tüüp</option>
               <option value="korter">Korter</option>
               <option value="maja">Maja</option>
@@ -73,7 +73,7 @@
             </select>
           </div>
           <div>
-            <select class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary">
+            <select class="w-full px-4 py-3 rounded-lg border border-gray-300 search-input focus:outline-none focus:border-primary text-gray-900">
               <option value="">Hinna vahemik</option>
               <option value="0-50000">0 - 50 000€</option>
               <option value="50000-100000">50 000€ - 100 000€</option>
